--- a/frontend/src/app/pages/user-page/user-page.page.html
+++ b/frontend/src/app/pages/user-page/user-page.page.html
@@ -5,12 +5,24 @@
 </ion-header>
 
 <ion-content *ngIf="!auth.token">
-  <ion-button [href]="loginURL">Log In</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button (click)="login()">Log In</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
 <ion-content *ngIf="auth.token">
-  <ion-button (click)="auth.logout()">Log Out</ion-button>
-      <ion-item>
-        <ion-label>Active JWT</ion-label>
-        <ion-textarea [ngModel]="auth.token" name="Active JWT"></ion-textarea>
-      </ion-item>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" class="ion-text-center">
+        <ion-button (click)="auth.logout()">Log Out</ion-button>
+        <ion-item>
+          <ion-label>Active JWT</ion-label>
+          <ion-textarea [ngModel]="auth.token" name="Active JWT"></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
