made upgrades to login and logout methods.

--- a/frontend/src/app/pages/user-page/user-page.page.html
+++ b/frontend/src/app/pages/user-page/user-page.page.html
@@ -8,7 +8,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" class="ion-text-center">
-        <ion-button (click)="login()">Log In</ion-button>
+        <ion-button (click)="auth.login()">Log In</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
